fixed unintentional spacing on click at h2

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -107,7 +107,7 @@
   }
 }
 
-.InputAdjacentText:focus + h2 {
+h2 + .InputAdjacentText:focus {
   top: -0.75rem;
   font-size: 14px;
   padding: 0 0.5rem;
